--- a/main.html
+++ b/main.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Quiz App</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
+  <h1>Quiz App</h1>
 
-  <body>
-    <h1>Quiz</h1>
-    <div id="questions"></div>
-    <button id="submit">Submit</button>
-    <div id="score"></div>
+  <div id="questions"></div>
+  
+  <button id="submit">Submit</button>
 
-    <script type="text/javascript" src="./script.js"></script>
-  </body>
+  <div id="score"></div>
+
+  <script src="scripts.js"></script>
+</body>
 </html>
