--- a/main.html
+++ b/main.html
@@ -2,16 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Quiz App</title>
-  <link rel="stylesheet" href="styles.css" />
+  <script defer src="scripts.js"></script>
 </head>
 <body>
   <div id="questions"></div>
   <button id="submit">Submit</button>
   <div id="score"></div>
-
-  <script src="scripts.js"></script>
 </body>
 </html>
